tests/rosetta/out/Zig/arithmetic-integer-1.error
zig build error: exit status 1
/tmp/TestMochiZigGoldenarithmetic-integer-12051036124/001/prog.zig:22:5: error: redeclaration of 'main'
/tmp/TestMochiZigGoldenarithmetic-integer-12051036124/001/prog.zig:12:1: note: other declaration here
